[WIP] mail: timeline view for messaging (buttons)

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -59,6 +59,162 @@
         border-left: dashed 2px #A4A4A4;
     }
 
+    /* -------------- parent message -------------- */
+
+        .openerp .oe_timeline .oe_tl_thread_parent {
+            width: 950px;
+            margin-top: 10px;
+            vertical-align: middle;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message {
+            background-color: white;
+            border: solid 1px #CACACA;
+            margin-left: 17%;
+            padding: 3px;
+            margin-bottom: 10px; 
+            white-space: nowrap;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject {
+            display: inline-block;
+            width: 525px;
+            cursor: pointer;
+            vertical-align: middle;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject .oe_tl_subject {
+            display: inline-block;
+            max-width: 495px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: middle;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject .oe_tl_nb_unread_msg {
+            font-weight: bold; 
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_author {
+            display: inline-block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: middle;
+            width: 123px;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_timeline_action_author {
+            color: #337ab7;
+        }
+
+        /* date */
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_msg_date {
+            line-height: 15px;
+        }
+
+        /* avatar */
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar {                           
+            left:0; 
+            top: 0; 
+            bottom: 0; 
+            width: 30px;
+            overflow: hidden;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar img {
+            border: solid 1px #CACACA;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar .oe_tl_msg_icon {
+            width: 25px;
+            border-radius: 2px;
+        }
+
+        /* followers */
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_followers {
+            float: right;
+            margin-right: 17px; 
+            margin-top: 3px;
+            color: #337ab7;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_followers i {
+            text-decoration: none;
+            color: #FFF;
+            font-size: 1.1em;
+            padding-left: 2px;
+            cursor: pointer;
+            text-shadow: 0px 1px #AAA,0px -1px #AAA, -1px 0px #AAA, 1px 0px #AAA, 0px 3px 3px rgba(0,0,0,0.1);
+            -webkit-transition: all 0.2s linear;
+               -moz-transition: all 0.2s linear;
+                 -o-transition: all 0.2s linear;
+                    transition: all 0.2s linear;
+        }
+
+        /* icons */
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons {
+            margin-top: -7px;
+            height: 8px;
+            -webkit-user-select: none;
+               -moz-user-select: none;
+                -ms-user-select: none;
+                    user-select: none;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_read,
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_unread {
+            margin-top: 7px;
+            margin-right: 5px;
+            float: left;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_reply {
+            margin-top: 3px;
+            float: right;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons span {
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            text-align: center;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons i {
+            text-decoration: none;
+            color: #FFF;
+            text-shadow: 0px 1px #AAA,0px -1px #AAA, -1px 0px #AAA, 1px 0px #AAA, 0px 3px 3px rgba(0,0,0,0.1);
+            -webkit-transition: all 0.2s linear;
+               -moz-transition: all 0.2s linear;
+                 -o-transition: all 0.2s linear;
+                    transition: all 0.2s linear;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent:hover .oe_tl_parent_message .oe_tl_msg_icons i {
+            opacity: 1;
+            -webkit-transition: all 0.1s linear;
+               -moz-transition: all 0.1s linear;
+                 -o-transition: all 0.1s linear;
+                    transition: all 0.1s linear;
+        }
+
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_reply:hover i {
+            color: #1fc0ff;
+            text-shadow: 0px 1px #184fc5,0px -1px #184fc5, -1px 0px #184fc5, 1px 0px #184fc5, 0px 3px 3px rgba(0,0,0,0.1);
+        }
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_read:hover i {
+            color: #bbbaff;
+            text-shadow: 0px 1px #7c7bad,0px -1px #7c7bad, -1px 0px #7c7bad, 1px 0px #7c7bad, 0px 3px 3px rgba(0,0,0,0.1);
+        }
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_unread:hover i {
+            color: #c2ff00;
+            text-shadow: 0px 1px #009441,0px -1px #009441, -1px 0px #009441, 1px 0px #009441, 0px 3px 3px rgba(0,0,0,0.1);
+        }
+
     /* ------------ message composer ------------ */
 
         .openerp .oe_timeline .oe_tl_msg.oe_tl_msg_composer {
@@ -74,8 +230,9 @@
             border-left: dashed 2px #A4A4A4;
         }
 
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_msg.oe_tl_msg_composer {
-            margin-left: 16.9%;
+        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_msg.oe_tl_msg_composer,
+        .openerp .oe_timeline .oe_tl_msg.oe_tl_msg_composer.oe_tl_write_to_followers {
+            margin-left: 16.8%;
             margin-top: 0px;
             border-bottom: none;
         }
@@ -89,7 +246,7 @@
             display: block;
             background: #f0eeee;
             border-style: none;
-            min-height:0px;
+            min-height: 0px;
             margin-bottom: 8px;
         }
 
@@ -395,143 +552,6 @@
                     transition: opacity 0.2s linear; 
         }
 
-    /* -------------- parent message -------------- */
-
-        .openerp .oe_timeline .oe_tl_thread_parent {
-            width: 1050px;
-            margin-top: 10px;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message {
-            background-color: white;
-            border: solid 1px #CACACA;
-            margin-left: 17%;
-            padding: 3px;
-            margin-bottom: 10px; 
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject {
-            display: inline-block;
-            width: 550px;
-            cursor: pointer;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject .oe_tl_nb_unread_msg {
-            font-weight: bold; 
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_timeline_action_author {
-           color: #337ab7;
-        }
-
-        /* date */
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_msg_date {
-           margin-top: 7px;
-        }
-
-        /* avatar */
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar {                           
-            left:0; 
-            top: 0; 
-            bottom: 0; 
-            width: 30px;
-            overflow: hidden;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar img {
-            border: solid 1px #CACACA;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar .oe_tl_msg_icon {
-            width: 25px;
-            border-radius: 2px;
-        }
-
-        /* followers */
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_followers {
-            float: right;
-            margin-right: 17px; 
-            margin-top: 3px;
-            color: #337ab7;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_followers i {
-            text-decoration: none;
-            color: #FFF;
-            font-size: 1.1em;
-            padding-left: 2px;
-            cursor: pointer;
-            text-shadow: 0px 1px #AAA,0px -1px #AAA, -1px 0px #AAA, 1px 0px #AAA, 0px 3px 3px rgba(0,0,0,0.1);
-            -webkit-transition: all 0.2s linear;
-               -moz-transition: all 0.2s linear;
-                 -o-transition: all 0.2s linear;
-                    transition: all 0.2s linear;
-        }
-
-        /* icons */
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons {
-            margin-top: -7px;
-            height: 8px;
-            -webkit-user-select: none;
-               -moz-user-select: none;
-                -ms-user-select: none;
-                    user-select: none;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_read,
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_unread {
-            margin-top: 7px;
-            margin-right: 5px;
-            float: left;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_reply {
-            margin-top: 3px;
-            float: right;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons span {
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
-            text-align: center;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons i {
-            text-decoration: none;
-            color: #FFF;
-            text-shadow: 0px 1px #AAA,0px -1px #AAA, -1px 0px #AAA, 1px 0px #AAA, 0px 3px 3px rgba(0,0,0,0.1);
-            -webkit-transition: all 0.2s linear;
-               -moz-transition: all 0.2s linear;
-                 -o-transition: all 0.2s linear;
-                    transition: all 0.2s linear;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent:hover .oe_tl_parent_message .oe_tl_msg_icons i {
-            opacity: 1;
-            -webkit-transition: all 0.1s linear;
-               -moz-transition: all 0.1s linear;
-                 -o-transition: all 0.1s linear;
-                    transition: all 0.1s linear;
-        }
-
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_reply:hover i {
-            color: #1fc0ff;
-            text-shadow: 0px 1px #184fc5,0px -1px #184fc5, -1px 0px #184fc5, 1px 0px #184fc5, 0px 3px 3px rgba(0,0,0,0.1);
-        }
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_read:hover i {
-            color: #bbbaff;
-            text-shadow: 0px 1px #7c7bad,0px -1px #7c7bad, -1px 0px #7c7bad, 1px 0px #7c7bad, 0px 3px 3px rgba(0,0,0,0.1);
-        }
-        .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_unread:hover i {
-            color: #c2ff00;
-            text-shadow: 0px 1px #009441,0px -1px #009441, -1px 0px #009441, 1px 0px #009441, 0px 3px 3px rgba(0,0,0,0.1);
-        }
-
     /* ------------ expandable message ------------ */ 
 
         .openerp .oe_timeline .oe_tl_thread_expendable {  
@@ -795,7 +815,7 @@
             font-size: 1em;
         }
         .openerp .oe_timeline .oe_tl_msg .oe_tl_msg_content .oe_tl_msg_body * {
-            text-overflow:ellipsis;
+            text-overflow: ellipsis;
             word-wrap: break-word;
         }
 
