--- a/addons/product_email_template/views/email_template_view.xml
+++ b/addons/product_email_template/views/email_template_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <record model="ir.ui.view" id="email_template_form_simplified">
-            <field name="name">email.template.form.simplified</field>
+            <field name="name">email.template.form</field>
             <field name="model">mail.template</field>
             <field name="priority">100</field>
             <field name="arch" type="xml">
@@ -19,5 +18,4 @@
                 </form>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
