--- a/addons/product_email_template/views/product_view.xml
+++ b/addons/product_email_template/views/product_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <record id="product_template_form_view" model="ir.ui.view">
             <field name="name">product.template.form.inherit</field>
             <field name="model">product.template</field>
@@ -19,5 +18,4 @@
                 </field>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
