[MIG] website_mail : migrate to new api

--- a/addons/website_mail/views/snippets.xml
+++ b/addons/website_mail/views/snippets.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<odoo>
 <template id="email_designer_snippets">
 <ul>
     <li class="active">
@@ -500,5 +499,4 @@
 </div>
 </template>
 
-</data>
-</openerp>
+</odoo>
