--- a/addons/website_mail/views/website_email_designer.xml
+++ b/addons/website_mail/views/website_email_designer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
 <record id="mail_wizard_invite_form" model="ir.ui.view">
     <field name="name">Add Followers</field>
@@ -77,9 +76,4 @@
     </t>
 </template>
 
-
-    </data>
-</openerp>
-
-
-
+</odoo>
