--- a/addons/website_mail/views/website_mail.xml
+++ b/addons/website_mail/views/website_mail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<odoo>
 
 <template id="follow">
     <div class="input-group js_follow" t-att-data-id="object.id"
@@ -28,5 +27,4 @@
     </xpath>
 </template>
 
-</data>
-</openerp>
+</odoo>
