[IMP] base_action_rule : Convert to new api

--- a/addons/base_action_rule/views/base_action_rule_view.xml
+++ b/addons/base_action_rule/views/base_action_rule_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <!-- Action Rule Form View -->
         <record id="view_base_action_rule_form" model="ir.ui.view">
             <field name="name">base.action.rule.form</field>
@@ -12,7 +11,7 @@
                         <h1><field name="name"/></h1>
                         <group>
                             <group>
-                                <field name="model_id" on_change="onchange_model_id(model_id, context)"/>
+                                <field name="model_id"/>
                                 <field name="model" invisible="1"/>
                             </group>
                             <group>
@@ -26,16 +25,14 @@
                                     <p><b>Please choose the document type before setting the conditions.</b></p>
                                 </group>
                                 <group attrs="{'invisible': [('model', '=', False)]}">
-                                    <field name="kind" required="1"
-                                        on_change="onchange_kind(kind)"/>
+                                    <field name="kind" required="1"/>
                                     <label for="filter_pre_id" attrs="{'invisible': [('kind', '!=', 'on_write')]}"/>
                                     <div attrs="{'invisible': [('kind', '!=', 'on_write')]}">
                                         <field name="filter_pre_domain" widget="char_domain" options="{'model_field': 'model'}"
                                             class="oe_inline"/>
                                         <div class="oe_edit_only oe_inline">Set selection based on a search filter:
                                             <field name="filter_pre_id" domain="[('model_id', '=', model), '|', ('user_id', '=', uid), ('user_id', '=', False)]"
-                                                class="oe_inline" context="{'default_model_id': model}"
-                                                on_change="onchange_filter_pre_id(filter_pre_id, context)"/></div>
+                                                class="oe_inline" context="{'default_model_id': model}"/></div>
                                     </div>
                                     <label for="filter_id"/>
                                     <div>
@@ -43,8 +40,7 @@
                                             class="oe_inline"/>
                                         <div class="oe_edit_only oe_inline">Set selection based on a search filter:
                                             <field name="filter_id" domain="[('model_id', '=', model), '|', ('user_id', '=', uid), ('user_id', '=', False)]"
-                                                class="oe_inline" context="{'default_model_id': model}"
-                                                on_change="onchange_filter_id(filter_id, context)"/></div>
+                                                class="oe_inline" context="{'default_model_id': model}"/></div>
                                     </div>
                                     <field name="trg_date_id"
                                         attrs="{'invisible': [('kind', '!=', 'on_time')], 'required': [('kind', '=', 'on_time')]}"/>
@@ -125,5 +121,4 @@
         <menuitem id="menu_base_action_rule_form"
             parent="base.menu_automation" action="base_action_rule_act" sequence="1"/>
 
-    </data>
-</openerp>
+</odoo>
