--- a/addons/stock/wizard/stock_return_picking_view.xml
+++ b/addons/stock/wizard/stock_return_picking_view.xml
@@ -54,6 +54,9 @@
                             </tree>
                         </field>
                     </group>
+                    <group>
+                        <field name="location_id" widget="selection" groups="stock.group_locations" />
+                    </group>
                     <footer>
                         <button name="create_returns" string="Return" type="object" class="oe_highlight"/>
                         or
