[REF] web: webclient structure lessify
* share: webclient_bootstrap overrides were wrong
* view_list.js: contition to display the page button was reversed and
  the initial hidden state was done by css, so added the rules
* base.xml: template was all not consistent with previous changes

--- a/addons/share/views/share.xml
+++ b/addons/share/views/share.xml
@@ -8,10 +8,10 @@
             </xpath>
         </template>
         <template id="webclient_bootstrap" name="Webclient Bootstrap - Share" inherit_id="web.webclient_bootstrap">
-            <xpath expr="//nav[@id='oe_main_menu_navbar']" position="attributes">
+            <xpath expr="//body/nav" position="attributes">
                 <attribute name="groups">base.group_user,base.group_portal,share.group_shared</attribute>
             </xpath>
-            <xpath expr="//div[@class='openerp openerp_webclient_container oe_webclient']//div" position="attributes">
+            <xpath expr="//div[@class='col-xs-6 col-sm-2 o-secondary-menu']" position="attributes">
                 <attribute name="groups">base.group_user,base.group_portal,share.group_shared</attribute>
             </xpath>
         </template>
