--- a/addons/website_event_track/views/event_backend.xml
+++ b/addons/website_event_track/views/event_backend.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
 
         <!-- Event Tracks -->
         <record model="ir.ui.view" id="view_event_track_kanban">
@@ -183,7 +182,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
 
         <!-- EVENTS/CONFIGURATION/EVENT locations -->
         <record model="ir.ui.view" id="view_event_location_form">
-            <field name="name">Event Locations</field>
+            <field name="name">event.track.location.form</field>
             <field name="model">event.track.location</field>
             <field name="arch" type="xml">
                 <form string="Event Location">
@@ -196,7 +195,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
             </field>
         </record>
         <record model="ir.ui.view" id="view_event_location_tree">
-            <field name="name">Event Location</field>
+            <field name="name">event.track.location.tree</field>
             <field name="model">event.track.location</field>
             <field name="arch" type="xml">
                 <tree string="Event Location">
@@ -214,7 +213,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
 
         <!-- EVENTS/CONFIGURATION/EVENT Sponsor Types -->
         <record model="ir.ui.view" id="view_event_sponsor_type_form">
-            <field name="name">Sponsor Types</field>
+            <field name="name">event.sponsor.type.form</field>
             <field name="model">event.sponsor.type</field>
             <field name="arch" type="xml">
                 <form string="Event Sponsor Types">
@@ -228,7 +227,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
             </field>
         </record>
         <record model="ir.ui.view" id="view_event_sponsor_type_tree">
-            <field name="name">Sponsor Types</field>
+            <field name="name">event.sponsor.type.tree</field>
             <field name="model">event.sponsor.type</field>
             <field name="arch" type="xml">
                 <tree string="Event Sponsor Type">
@@ -276,7 +275,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
 
         <!-- EVENTS/CONFIGURATION/EVENT Tags -->
         <record model="ir.ui.view" id="view_event_track_tag_form">
-            <field name="name">Track Tags</field>
+            <field name="name">event.track.tag.form</field>
             <field name="model">event.track.tag</field>
             <field name="arch" type="xml">
                 <form string="Event Track Tag">
@@ -289,7 +288,7 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
             </field>
         </record>
         <record model="ir.ui.view" id="view_event_track_tag_tree">
-            <field name="name">Tracks Tag</field>
+            <field name="name">event.track.tag.tree</field>
             <field name="model">event.track.tag</field>
             <field name="arch" type="xml">
                 <tree string="Event Track Tag">
@@ -304,8 +303,8 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
         <menuitem id="menu_event_track_tag" action="action_event_track_tag" parent="event.event_configuration" groups="base.group_no_one"/>
 
         <!-- Events Organisation/CONFIGURATION/EVENTS -->
-        <record model="ir.ui.view" id="view_event_form">
-            <field name="name">Event Tracks</field>
+        <record model="ir.ui.view" id="view_event_form_inherit_event_track">
+            <field name="name">view.event.form.inherit</field>
             <field name="inherit_id" ref="event.view_event_form"/>
             <field name="model">event.event</field>
             <field name="arch" type="xml">
@@ -338,5 +337,4 @@ Tracks define the agenda of your event. These can be a talk, a round table, a me
             </field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
