[IMP]Add a lunch widget,add one2many field(previous_order_details) to get a previous lunch order detail ids in lunch widget,  add a two related fields(company_id,cuurency_id) on lunch.order and one related field(currency_id) on lunch.order.line to get a currency, and add  a related field(category_id) to get a category on lunch widget by doing only one rpc call to read on lunch.order.line .

--- a/addons/lunch/views/lunch.xml
+++ b/addons/lunch/views/lunch.xml
@@ -4,6 +4,7 @@
         <template id="assets_backend" name="lunch assets" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/lunch/static/src/css/lunch.css"/>
+                <script type="text/javascript" src="/lunch/static/src/js/lunch.js"></script>
             </xpath>
         </template>
     </data>
